# serializer version: 1
# name: test_create_task_response
  HabiticaTaskResponse(
    appVersion='5.28.6',
    data=TaskData(
      Type=<TaskType.HABIT: 'habit'>,
      alias='counter_test',
      attribute=<Attributes.STR: 'str'>,
      byHabitica=False,
      challenge=Challenge(
        broken=None,
        id=None,
        shortName=None,
        taskId=None,
        winner=None,
      ),
      checklist=list([
      ]),
      collapseChecklist=False,
      completed=None,
      counterDown=0,
      counterUp=0,
      createdAt=datetime.datetime(2024, 9, 22, 16, 41, 39, 555000, tzinfo=datetime.timezone.utc),
      date=None,
      daysOfMonth=list([
      ]),
      down=False,
      everyX=None,
      frequency=<Frequency.DAILY: 'daily'>,
      group=GroupTask(
        assignedDate=None,
        assignedUsers=list([
        ]),
        assignedUsersDetail=dict({
        }),
        assigningUsername=None,
        completedBy=CompletedBy(
          date=None,
          userId=None,
        ),
        id=None,
        managerNotes=None,
        taskId=None,
      ),
      history=list([
        EntryHistory(
          completed=None,
          date=datetime.datetime(2024, 10, 7, 19, 19, 47, 306000, tzinfo=datetime.timezone.utc),
          isDue=None,
          scoredDown=0,
          scoredUp=1,
          value=1.0,
        ),
        EntryHistory(
          completed=None,
          date=datetime.datetime(2024, 10, 16, 20, 19, 11, 168000, tzinfo=datetime.timezone.utc),
          isDue=None,
          scoredDown=0,
          scoredUp=9,
          value=8.184193475367,
        ),
      ]),
      id=UUID('7bc0d924-f5e5-48a6-af7f-8075f8c94e0f'),
      isDue=None,
      nextDue=list([
      ]),
      notes='task notes',
      priority=<TaskPriority.EASY: 1>,
      reminders=list([
      ]),
      repeat=Repeat(
        f=False,
        m=True,
        s=False,
        su=False,
        t=True,
        th=False,
        w=True,
      ),
      startDate=None,
      streak=None,
      tags=list([
      ]),
      text='task text',
      up=True,
      updatedAt=datetime.datetime(2024, 10, 26, 16, 48, 8, 742000, tzinfo=datetime.timezone.utc),
      userId=UUID('2a61fddc-654f-4ded-b906-bb8a6da680d5'),
      value=0.0,
      weeksOfMonth=list([
      ]),
      yesterDaily=None,
    ),
    notifications=list([
      NotificationsUser(
        Type='ITEM_RECEIVED',
        data=dict({
          'destination': 'stable',
          'icon': 'notif_orca_mount',
          'text': "To celebrate Summer Splash, we've given you an Orca Mount!",
          'title': 'Orcas for Summer Splash!',
        }),
        id=UUID('b7a85df1-06ed-4ab1-b56d-43418fc6a5e5'),
        seen=True,
      ),
      NotificationsUser(
        Type='UNALLOCATED_STATS_POINTS',
        data=dict({
          'points': 2,
        }),
        id=UUID('bc3f8a69-231f-4eb1-ba48-a00b6c0e0f37'),
        seen=True,
      ),
    ]),
    success=True,
    userV=589,
  )
# ---
# name: test_delete_task
  HabiticaResponse(
    appVersion='5.28.6',
    data=None,
    notifications=list([
      NotificationsUser(
        Type='ITEM_RECEIVED',
        data=dict({
          'destination': 'stable',
          'icon': 'notif_orca_mount',
          'text': "To celebrate Summer Splash, we've given you an Orca Mount!",
          'title': 'Orcas for Summer Splash!',
        }),
        id=UUID('b7a85df1-06ed-4ab1-b56d-43418fc6a5e5'),
        seen=True,
      ),
      NotificationsUser(
        Type='UNALLOCATED_STATS_POINTS',
        data=dict({
          'points': 2,
        }),
        id=UUID('bc3f8a69-231f-4eb1-ba48-a00b6c0e0f37'),
        seen=True,
      ),
    ]),
    success=True,
    userV=589,
  )
# ---
# name: test_get_task
  HabiticaTaskResponse(
    appVersion='5.28.6',
    data=TaskData(
      Type=<TaskType.HABIT: 'habit'>,
      alias='counter_test',
      attribute=<Attributes.STR: 'str'>,
      byHabitica=False,
      challenge=Challenge(
        broken=None,
        id=None,
        shortName=None,
        taskId=None,
        winner=None,
      ),
      checklist=list([
      ]),
      collapseChecklist=False,
      completed=None,
      counterDown=0,
      counterUp=0,
      createdAt=datetime.datetime(2024, 9, 22, 16, 41, 39, 555000, tzinfo=datetime.timezone.utc),
      date=None,
      daysOfMonth=list([
      ]),
      down=False,
      everyX=None,
      frequency=<Frequency.DAILY: 'daily'>,
      group=GroupTask(
        assignedDate=None,
        assignedUsers=list([
        ]),
        assignedUsersDetail=dict({
        }),
        assigningUsername=None,
        completedBy=CompletedBy(
          date=None,
          userId=None,
        ),
        id=None,
        managerNotes=None,
        taskId=None,
      ),
      history=list([
        EntryHistory(
          completed=None,
          date=datetime.datetime(2024, 10, 7, 19, 19, 47, 306000, tzinfo=datetime.timezone.utc),
          isDue=None,
          scoredDown=0,
          scoredUp=1,
          value=1.0,
        ),
        EntryHistory(
          completed=None,
          date=datetime.datetime(2024, 10, 16, 20, 19, 11, 168000, tzinfo=datetime.timezone.utc),
          isDue=None,
          scoredDown=0,
          scoredUp=9,
          value=8.184193475367,
        ),
      ]),
      id=UUID('7bc0d924-f5e5-48a6-af7f-8075f8c94e0f'),
      isDue=None,
      nextDue=list([
      ]),
      notes='task notes',
      priority=<TaskPriority.EASY: 1>,
      reminders=list([
      ]),
      repeat=Repeat(
        f=False,
        m=True,
        s=False,
        su=False,
        t=True,
        th=False,
        w=True,
      ),
      startDate=None,
      streak=None,
      tags=list([
      ]),
      text='task text',
      up=True,
      updatedAt=datetime.datetime(2024, 10, 26, 16, 48, 8, 742000, tzinfo=datetime.timezone.utc),
      userId=UUID('2a61fddc-654f-4ded-b906-bb8a6da680d5'),
      value=0.0,
      weeksOfMonth=list([
      ]),
      yesterDaily=None,
    ),
    notifications=list([
      NotificationsUser(
        Type='ITEM_RECEIVED',
        data=dict({
          'destination': 'stable',
          'icon': 'notif_orca_mount',
          'text': "To celebrate Summer Splash, we've given you an Orca Mount!",
          'title': 'Orcas for Summer Splash!',
        }),
        id=UUID('b7a85df1-06ed-4ab1-b56d-43418fc6a5e5'),
        seen=True,
      ),
      NotificationsUser(
        Type='UNALLOCATED_STATS_POINTS',
        data=dict({
          'points': 2,
        }),
        id=UUID('bc3f8a69-231f-4eb1-ba48-a00b6c0e0f37'),
        seen=True,
      ),
    ]),
    success=True,
    userV=589,
  )
# ---
# name: test_get_tasks
  HabiticaTasksResponse(
    appVersion='5.28.6',
    data=list([
      TaskData(
        Type=<TaskType.HABIT: 'habit'>,
        alias='counter_test',
        attribute=<Attributes.STR: 'str'>,
        byHabitica=False,
        challenge=Challenge(
          broken=None,
          id=None,
          shortName=None,
          taskId=None,
          winner=None,
        ),
        checklist=list([
        ]),
        collapseChecklist=False,
        completed=None,
        counterDown=0,
        counterUp=0,
        createdAt=datetime.datetime(2024, 9, 22, 16, 41, 39, 555000, tzinfo=datetime.timezone.utc),
        date=None,
        daysOfMonth=list([
        ]),
        down=False,
        everyX=None,
        frequency=<Frequency.DAILY: 'daily'>,
        group=GroupTask(
          assignedDate=None,
          assignedUsers=list([
          ]),
          assignedUsersDetail=dict({
          }),
          assigningUsername=None,
          completedBy=CompletedBy(
            date=None,
            userId=None,
          ),
          id=None,
          managerNotes=None,
          taskId=None,
        ),
        history=list([
          EntryHistory(
            completed=None,
            date=datetime.datetime(2024, 10, 7, 19, 19, 47, 306000, tzinfo=datetime.timezone.utc),
            isDue=None,
            scoredDown=0,
            scoredUp=1,
            value=1.0,
          ),
          EntryHistory(
            completed=None,
            date=datetime.datetime(2024, 10, 16, 20, 19, 11, 168000, tzinfo=datetime.timezone.utc),
            isDue=None,
            scoredDown=0,
            scoredUp=9,
            value=8.184193475367,
          ),
        ]),
        id=UUID('7bc0d924-f5e5-48a6-af7f-8075f8c94e0f'),
        isDue=None,
        nextDue=list([
        ]),
        notes='task notes',
        priority=<TaskPriority.EASY: 1>,
        reminders=list([
        ]),
        repeat=Repeat(
          f=False,
          m=True,
          s=False,
          su=False,
          t=True,
          th=False,
          w=True,
        ),
        startDate=None,
        streak=None,
        tags=list([
        ]),
        text='task text',
        up=True,
        updatedAt=datetime.datetime(2024, 10, 26, 16, 48, 8, 742000, tzinfo=datetime.timezone.utc),
        userId=UUID('2a61fddc-654f-4ded-b906-bb8a6da680d5'),
        value=0.0,
        weeksOfMonth=list([
        ]),
        yesterDaily=None,
      ),
      TaskData(
        Type=<TaskType.HABIT: 'habit'>,
        alias=None,
        attribute=<Attributes.STR: 'str'>,
        byHabitica=False,
        challenge=Challenge(
          broken=None,
          id=None,
          shortName=None,
          taskId=None,
          winner=None,
        ),
        checklist=list([
        ]),
        collapseChecklist=False,
        completed=None,
        counterDown=0,
        counterUp=0,
        createdAt=datetime.datetime(2024, 9, 22, 16, 41, 39, 555000, tzinfo=datetime.timezone.utc),
        date=None,
        daysOfMonth=list([
        ]),
        down=True,
        everyX=None,
        frequency=<Frequency.DAILY: 'daily'>,
        group=GroupTask(
          assignedDate=None,
          assignedUsers=list([
          ]),
          assignedUsersDetail=dict({
          }),
          assigningUsername=None,
          completedBy=CompletedBy(
            date=None,
            userId=None,
          ),
          id=None,
          managerNotes=None,
          taskId=None,
        ),
        history=list([
          EntryHistory(
            completed=None,
            date=datetime.datetime(2024, 10, 16, 20, 19, 5, 151000, tzinfo=datetime.timezone.utc),
            isDue=None,
            scoredDown=0,
            scoredUp=4,
            value=3.853133245658556,
          ),
        ]),
        id=UUID('5e1bf953-af75-492c-ba02-c18789758d26'),
        isDue=None,
        nextDue=list([
        ]),
        notes='task notes',
        priority=<TaskPriority.EASY: 1>,
        reminders=list([
        ]),
        repeat=Repeat(
          f=False,
          m=True,
          s=False,
          su=False,
          t=True,
          th=False,
          w=True,
        ),
        startDate=None,
        streak=None,
        tags=list([
        ]),
        text='task text',
        up=True,
        updatedAt=datetime.datetime(2024, 12, 14, 1, 34, 39, 602000, tzinfo=datetime.timezone.utc),
        userId=UUID('2a61fddc-654f-4ded-b906-bb8a6da680d5'),
        value=3.853133245658556,
        weeksOfMonth=list([
        ]),
        yesterDaily=None,
      ),
      TaskData(
        Type=<TaskType.TODO: 'todo'>,
        alias='task-alias',
        attribute=<Attributes.STR: 'str'>,
        byHabitica=True,
        challenge=Challenge(
          broken=None,
          id=None,
          shortName=None,
          taskId=None,
          winner=None,
        ),
        checklist=list([
          Checklist(
            completed=True,
            id=UUID('fde91e22-fc27-40e6-a861-d2da47b5e7fd'),
            text='item 0',
          ),
          Checklist(
            completed=False,
            id=UUID('532ba006-1115-4db4-b19d-bb255e3dc3de'),
            text='item 1',
          ),
          Checklist(
            completed=False,
            id=UUID('08da262f-c4f6-4a59-9c33-340e87a7ef27'),
            text='item 2',
          ),
        ]),
        collapseChecklist=True,
        completed=False,
        counterDown=None,
        counterUp=None,
        createdAt=datetime.datetime(2024, 9, 22, 16, 41, 39, 555000, tzinfo=datetime.timezone.utc),
        date=None,
        daysOfMonth=list([
        ]),
        down=None,
        everyX=None,
        frequency=None,
        group=GroupTask(
          assignedDate=None,
          assignedUsers=list([
          ]),
          assignedUsersDetail=dict({
          }),
          assigningUsername=None,
          completedBy=CompletedBy(
            date=None,
            userId=None,
          ),
          id=None,
          managerNotes=None,
          taskId=None,
        ),
        history=list([
        ]),
        id=UUID('e8be3a26-6d3b-43bc-9aac-8246a8bedaed'),
        isDue=None,
        nextDue=list([
        ]),
        notes='task notes',
        priority=<TaskPriority.TRIVIAL: 0.1>,
        reminders=list([
          Reminders(
            id=UUID('3e636b09-4a8c-4b2b-a525-29361b510d5b'),
            startDate=None,
            time=datetime.datetime(2024, 10, 13, 20, 51, 49, 391000, tzinfo=datetime.timezone.utc),
          ),
        ]),
        repeat=Repeat(
          f=False,
          m=True,
          s=False,
          su=False,
          t=True,
          th=False,
          w=True,
        ),
        startDate=None,
        streak=None,
        tags=list([
        ]),
        text='task text',
        up=None,
        updatedAt=datetime.datetime(2025, 2, 1, 15, 6, 43, 570000, tzinfo=datetime.timezone.utc),
        userId=UUID('2a61fddc-654f-4ded-b906-bb8a6da680d5'),
        value=-68.61448963773076,
        weeksOfMonth=list([
        ]),
        yesterDaily=None,
      ),
      TaskData(
        Type=<TaskType.REWARD: 'reward'>,
        alias=None,
        attribute=<Attributes.STR: 'str'>,
        byHabitica=False,
        challenge=Challenge(
          broken=None,
          id=None,
          shortName=None,
          taskId=None,
          winner=None,
        ),
        checklist=list([
        ]),
        collapseChecklist=False,
        completed=None,
        counterDown=None,
        counterUp=None,
        createdAt=datetime.datetime(2024, 9, 22, 16, 41, 39, 555000, tzinfo=datetime.timezone.utc),
        date=None,
        daysOfMonth=list([
        ]),
        down=None,
        everyX=None,
        frequency=None,
        group=GroupTask(
          assignedDate=None,
          assignedUsers=list([
          ]),
          assignedUsersDetail=dict({
          }),
          assigningUsername=None,
          completedBy=CompletedBy(
            date=None,
            userId=None,
          ),
          id=None,
          managerNotes=None,
          taskId=None,
        ),
        history=list([
        ]),
        id=UUID('93eb1e9c-4d14-4a94-b699-279963ecf410'),
        isDue=None,
        nextDue=list([
        ]),
        notes='task notes',
        priority=<TaskPriority.EASY: 1>,
        reminders=list([
        ]),
        repeat=Repeat(
          f=False,
          m=True,
          s=False,
          su=False,
          t=True,
          th=False,
          w=True,
        ),
        startDate=None,
        streak=None,
        tags=list([
          UUID('50021cf7-b9f2-4f94-b80d-0263ce7cf3ec'),
        ]),
        text='task text',
        up=None,
        updatedAt=datetime.datetime(2024, 10, 17, 22, 25, 27, 43000, tzinfo=datetime.timezone.utc),
        userId=UUID('2a61fddc-654f-4ded-b906-bb8a6da680d5'),
        value=1.0,
        weeksOfMonth=list([
        ]),
        yesterDaily=None,
      ),
      TaskData(
        Type=<TaskType.HABIT: 'habit'>,
        alias='test_habit',
        attribute=<Attributes.STR: 'str'>,
        byHabitica=False,
        challenge=Challenge(
          broken=None,
          id=None,
          shortName=None,
          taskId=None,
          winner=None,
        ),
        checklist=list([
        ]),
        collapseChecklist=False,
        completed=None,
        counterDown=0,
        counterUp=0,
        createdAt=datetime.datetime(2024, 10, 7, 19, 8, 12, 325000, tzinfo=datetime.timezone.utc),
        date=None,
        daysOfMonth=list([
        ]),
        down=False,
        everyX=None,
        frequency=<Frequency.MONTHLY: 'monthly'>,
        group=GroupTask(
          assignedDate=None,
          assignedUsers=list([
          ]),
          assignedUsersDetail=dict({
          }),
          assigningUsername=None,
          completedBy=CompletedBy(
            date=None,
            userId=None,
          ),
          id=None,
          managerNotes=None,
          taskId=None,
        ),
        history=list([
          EntryHistory(
            completed=None,
            date=datetime.datetime(2024, 10, 16, 20, 19, 3, 714000, tzinfo=datetime.timezone.utc),
            isDue=None,
            scoredDown=0,
            scoredUp=8,
            value=7.355994112832055,
          ),
        ]),
        id=UUID('67894647-f6e6-4f1a-824c-62a7fffff752'),
        isDue=None,
        nextDue=list([
        ]),
        notes='task notes',
        priority=<TaskPriority.HARD: 2>,
        reminders=list([
        ]),
        repeat=Repeat(
          f=False,
          m=True,
          s=False,
          su=False,
          t=True,
          th=False,
          w=True,
        ),
        startDate=None,
        streak=None,
        tags=list([
        ]),
        text='task text',
        up=True,
        updatedAt=datetime.datetime(2025, 2, 1, 15, 6, 43, 571000, tzinfo=datetime.timezone.utc),
        userId=UUID('2a61fddc-654f-4ded-b906-bb8a6da680d5'),
        value=0.0,
        weeksOfMonth=list([
        ]),
        yesterDaily=None,
      ),
      TaskData(
        Type=<TaskType.TODO: 'todo'>,
        alias=None,
        attribute=<Attributes.STR: 'str'>,
        byHabitica=False,
        challenge=Challenge(
          broken=None,
          id=None,
          shortName=None,
          taskId=None,
          winner=None,
        ),
        checklist=list([
        ]),
        collapseChecklist=False,
        completed=False,
        counterDown=None,
        counterUp=None,
        createdAt=datetime.datetime(2025, 1, 6, 18, 23, 10, 551000, tzinfo=datetime.timezone.utc),
        date=None,
        daysOfMonth=list([
        ]),
        down=None,
        everyX=None,
        frequency=None,
        group=GroupTask(
          assignedDate=None,
          assignedUsers=list([
          ]),
          assignedUsersDetail=dict({
          }),
          assigningUsername=None,
          completedBy=CompletedBy(
            date=None,
            userId=None,
          ),
          id=None,
          managerNotes=None,
          taskId=None,
        ),
        history=list([
        ]),
        id=UUID('75a4ac64-e8ac-44b8-b300-2086af8d2845'),
        isDue=None,
        nextDue=list([
        ]),
        notes='task notes',
        priority=<TaskPriority.EASY: 1>,
        reminders=list([
        ]),
        repeat=Repeat(
          f=False,
          m=True,
          s=False,
          su=False,
          t=True,
          th=False,
          w=True,
        ),
        startDate=None,
        streak=None,
        tags=list([
        ]),
        text='task text',
        up=None,
        updatedAt=datetime.datetime(2025, 2, 1, 15, 6, 43, 560000, tzinfo=datetime.timezone.utc),
        userId=UUID('2a61fddc-654f-4ded-b906-bb8a6da680d5'),
        value=-10.065628947026687,
        weeksOfMonth=list([
        ]),
        yesterDaily=None,
      ),
      TaskData(
        Type=<TaskType.TODO: 'todo'>,
        alias=None,
        attribute=<Attributes.STR: 'str'>,
        byHabitica=False,
        challenge=Challenge(
          broken=None,
          id=None,
          shortName=None,
          taskId=None,
          winner=None,
        ),
        checklist=list([
        ]),
        collapseChecklist=False,
        completed=False,
        counterDown=None,
        counterUp=None,
        createdAt=datetime.datetime(2025, 1, 6, 20, 22, 27, 696000, tzinfo=datetime.timezone.utc),
        date=None,
        daysOfMonth=list([
        ]),
        down=None,
        everyX=None,
        frequency=None,
        group=GroupTask(
          assignedDate=None,
          assignedUsers=list([
          ]),
          assignedUsersDetail=dict({
          }),
          assigningUsername=None,
          completedBy=CompletedBy(
            date=None,
            userId=None,
          ),
          id=None,
          managerNotes=None,
          taskId=None,
        ),
        history=list([
        ]),
        id=UUID('2cae3698-0ca3-441d-ac4e-980323956f42'),
        isDue=None,
        nextDue=list([
        ]),
        notes='task notes',
        priority=<TaskPriority.EASY: 1>,
        reminders=list([
        ]),
        repeat=Repeat(
          f=False,
          m=True,
          s=False,
          su=False,
          t=True,
          th=False,
          w=True,
        ),
        startDate=None,
        streak=None,
        tags=list([
        ]),
        text='task text',
        up=None,
        updatedAt=datetime.datetime(2025, 2, 1, 15, 6, 43, 561000, tzinfo=datetime.timezone.utc),
        userId=UUID('2a61fddc-654f-4ded-b906-bb8a6da680d5'),
        value=-10.065632848406528,
        weeksOfMonth=list([
        ]),
        yesterDaily=None,
      ),
      TaskData(
        Type=<TaskType.TODO: 'todo'>,
        alias=None,
        attribute=<Attributes.STR: 'str'>,
        byHabitica=False,
        challenge=Challenge(
          broken=None,
          id=None,
          shortName=None,
          taskId=None,
          winner=None,
        ),
        checklist=list([
        ]),
        collapseChecklist=False,
        completed=False,
        counterDown=None,
        counterUp=None,
        createdAt=datetime.datetime(2025, 1, 6, 20, 24, 32, 936000, tzinfo=datetime.timezone.utc),
        date=None,
        daysOfMonth=list([
        ]),
        down=None,
        everyX=None,
        frequency=None,
        group=GroupTask(
          assignedDate=None,
          assignedUsers=list([
          ]),
          assignedUsersDetail=dict({
          }),
          assigningUsername=None,
          completedBy=CompletedBy(
            date=None,
            userId=None,
          ),
          id=None,
          managerNotes=None,
          taskId=None,
        ),
        history=list([
        ]),
        id=UUID('a029cb52-1012-4d36-91af-b45c0bdbda69'),
        isDue=None,
        nextDue=list([
        ]),
        notes='task notes',
        priority=<TaskPriority.EASY: 1>,
        reminders=list([
        ]),
        repeat=Repeat(
          f=False,
          m=True,
          s=False,
          su=False,
          t=True,
          th=False,
          w=True,
        ),
        startDate=None,
        streak=None,
        tags=list([
        ]),
        text='task text',
        up=None,
        updatedAt=datetime.datetime(2025, 2, 1, 15, 6, 43, 561000, tzinfo=datetime.timezone.utc),
        userId=UUID('2a61fddc-654f-4ded-b906-bb8a6da680d5'),
        value=-4.16134259811365,
        weeksOfMonth=list([
        ]),
        yesterDaily=None,
      ),
      TaskData(
        Type=<TaskType.TODO: 'todo'>,
        alias=None,
        attribute=<Attributes.STR: 'str'>,
        byHabitica=False,
        challenge=Challenge(
          broken=None,
          id=None,
          shortName=None,
          taskId=None,
          winner=None,
        ),
        checklist=list([
        ]),
        collapseChecklist=False,
        completed=False,
        counterDown=None,
        counterUp=None,
        createdAt=datetime.datetime(2025, 1, 6, 20, 29, 0, 542000, tzinfo=datetime.timezone.utc),
        date=None,
        daysOfMonth=list([
        ]),
        down=None,
        everyX=None,
        frequency=None,
        group=GroupTask(
          assignedDate=None,
          assignedUsers=list([
          ]),
          assignedUsersDetail=dict({
          }),
          assigningUsername=None,
          completedBy=CompletedBy(
            date=None,
            userId=None,
          ),
          id=None,
          managerNotes=None,
          taskId=None,
        ),
        history=list([
        ]),
        id=UUID('203048ee-4020-48ef-99ef-3a20c7c9a8b3'),
        isDue=None,
        nextDue=list([
        ]),
        notes='task notes',
        priority=<TaskPriority.EASY: 1>,
        reminders=list([
        ]),
        repeat=Repeat(
          f=False,
          m=True,
          s=False,
          su=False,
          t=True,
          th=False,
          w=True,
        ),
        startDate=None,
        streak=None,
        tags=list([
        ]),
        text='task text',
        up=None,
        updatedAt=datetime.datetime(2025, 2, 1, 15, 6, 43, 561000, tzinfo=datetime.timezone.utc),
        userId=UUID('2a61fddc-654f-4ded-b906-bb8a6da680d5'),
        value=-4.16134259811365,
        weeksOfMonth=list([
        ]),
        yesterDaily=None,
      ),
      TaskData(
        Type=<TaskType.TODO: 'todo'>,
        alias=None,
        attribute=<Attributes.STR: 'str'>,
        byHabitica=False,
        challenge=Challenge(
          broken=None,
          id=None,
          shortName=None,
          taskId=None,
          winner=None,
        ),
        checklist=list([
        ]),
        collapseChecklist=False,
        completed=False,
        counterDown=None,
        counterUp=None,
        createdAt=datetime.datetime(2025, 1, 6, 20, 30, 16, 745000, tzinfo=datetime.timezone.utc),
        date=None,
        daysOfMonth=list([
        ]),
        down=None,
        everyX=None,
        frequency=None,
        group=GroupTask(
          assignedDate=None,
          assignedUsers=list([
          ]),
          assignedUsersDetail=dict({
          }),
          assigningUsername=None,
          completedBy=CompletedBy(
            date=None,
            userId=None,
          ),
          id=None,
          managerNotes=None,
          taskId=None,
        ),
        history=list([
        ]),
        id=UUID('9983f4c9-04be-446c-99d2-fca07e9e2dcd'),
        isDue=None,
        nextDue=list([
        ]),
        notes='task notes',
        priority=<TaskPriority.EASY: 1>,
        reminders=list([
        ]),
        repeat=Repeat(
          f=False,
          m=True,
          s=False,
          su=False,
          t=True,
          th=False,
          w=True,
        ),
        startDate=None,
        streak=None,
        tags=list([
        ]),
        text='task text',
        up=None,
        updatedAt=datetime.datetime(2025, 2, 1, 15, 6, 43, 561000, tzinfo=datetime.timezone.utc),
        userId=UUID('2a61fddc-654f-4ded-b906-bb8a6da680d5'),
        value=-10.065631750759767,
        weeksOfMonth=list([
        ]),
        yesterDaily=None,
      ),
      TaskData(
        Type=<TaskType.DAILY: 'daily'>,
        alias=None,
        attribute=<Attributes.STR: 'str'>,
        byHabitica=False,
        challenge=Challenge(
          broken=None,
          id=None,
          shortName=None,
          taskId=None,
          winner=None,
        ),
        checklist=list([
        ]),
        collapseChecklist=False,
        completed=False,
        counterDown=None,
        counterUp=None,
        createdAt=datetime.datetime(2025, 1, 6, 22, 42, 49, 719000, tzinfo=datetime.timezone.utc),
        date=None,
        daysOfMonth=list([
        ]),
        down=None,
        everyX=1,
        frequency=<Frequency.WEEKLY: 'weekly'>,
        group=GroupTask(
          assignedDate=None,
          assignedUsers=list([
          ]),
          assignedUsersDetail=dict({
          }),
          assigningUsername=None,
          completedBy=CompletedBy(
            date=None,
            userId=None,
          ),
          id=None,
          managerNotes=None,
          taskId=None,
        ),
        history=list([
          EntryHistory(
            completed=True,
            date=datetime.datetime(2025, 1, 6, 23, 0, 9, 684000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=1.0,
          ),
          EntryHistory(
            completed=True,
            date=datetime.datetime(2025, 1, 10, 1, 12, 46, 313000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=1.9747,
          ),
          EntryHistory(
            completed=False,
            date=datetime.datetime(2025, 1, 10, 23, 2, 8, 864000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=1.024043774264157,
          ),
          EntryHistory(
            completed=True,
            date=datetime.datetime(2025, 1, 13, 17, 48, 43, 163000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=1.998143412564751,
          ),
          EntryHistory(
            completed=True,
            date=datetime.datetime(2025, 1, 13, 23, 0, 47, 611000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=2.9482287028135716,
          ),
          EntryHistory(
            completed=False,
            date=datetime.datetime(2025, 1, 15, 17, 31, 41, 493000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=2.020995311995297,
          ),
          EntryHistory(
            completed=True,
            date=datetime.datetime(2025, 1, 18, 18, 22, 21, 871000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=2.9705244023522885,
          ),
          EntryHistory(
            completed=True,
            date=datetime.datetime(2025, 1, 20, 11, 47, 2, 983000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=3.8972281794078136,
          ),
          EntryHistory(
            completed=False,
            date=datetime.datetime(2025, 2, 1, 15, 6, 43, 541000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=2.992271863689143,
          ),
        ]),
        id=UUID('8b54b538-7fe5-4132-91e1-4eebac0073f5'),
        isDue=True,
        nextDue=list([
          datetime.datetime(2025, 2, 2, 23, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2025, 2, 3, 23, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2025, 2, 4, 23, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2025, 2, 5, 23, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2025, 2, 6, 23, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2025, 2, 7, 23, 0, tzinfo=datetime.timezone.utc),
        ]),
        notes='task notes',
        priority=<TaskPriority.EASY: 1>,
        reminders=list([
        ]),
        repeat=Repeat(
          f=True,
          m=True,
          s=True,
          su=True,
          t=True,
          th=True,
          w=True,
        ),
        startDate=datetime.datetime(2025, 1, 5, 23, 0, tzinfo=datetime.timezone.utc),
        streak=0,
        tags=list([
        ]),
        text='task text',
        up=None,
        updatedAt=datetime.datetime(2025, 2, 1, 15, 6, 43, 561000, tzinfo=datetime.timezone.utc),
        userId=UUID('2a61fddc-654f-4ded-b906-bb8a6da680d5'),
        value=2.992271863689143,
        weeksOfMonth=list([
        ]),
        yesterDaily=True,
      ),
      TaskData(
        Type=<TaskType.DAILY: 'daily'>,
        alias=None,
        attribute=<Attributes.STR: 'str'>,
        byHabitica=False,
        challenge=Challenge(
          broken=None,
          id=None,
          shortName=None,
          taskId=None,
          winner=None,
        ),
        checklist=list([
        ]),
        collapseChecklist=False,
        completed=False,
        counterDown=None,
        counterUp=None,
        createdAt=datetime.datetime(2025, 1, 6, 22, 42, 52, 877000, tzinfo=datetime.timezone.utc),
        date=None,
        daysOfMonth=list([
        ]),
        down=None,
        everyX=1,
        frequency=<Frequency.WEEKLY: 'weekly'>,
        group=GroupTask(
          assignedDate=None,
          assignedUsers=list([
          ]),
          assignedUsersDetail=dict({
          }),
          assigningUsername=None,
          completedBy=CompletedBy(
            date=None,
            userId=None,
          ),
          id=None,
          managerNotes=None,
          taskId=None,
        ),
        history=list([
          EntryHistory(
            completed=True,
            date=datetime.datetime(2025, 1, 6, 23, 0, 9, 696000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=1.0,
          ),
          EntryHistory(
            completed=True,
            date=datetime.datetime(2025, 1, 10, 1, 12, 46, 316000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=1.9747,
          ),
          EntryHistory(
            completed=False,
            date=datetime.datetime(2025, 1, 10, 23, 2, 8, 865000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=1.024043774264157,
          ),
          EntryHistory(
            completed=True,
            date=datetime.datetime(2025, 1, 13, 17, 48, 43, 166000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=1.998143412564751,
          ),
          EntryHistory(
            completed=True,
            date=datetime.datetime(2025, 1, 13, 23, 0, 47, 613000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=2.9482287028135716,
          ),
          EntryHistory(
            completed=True,
            date=datetime.datetime(2025, 1, 15, 17, 31, 41, 305000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=3.8754620936318465,
          ),
          EntryHistory(
            completed=True,
            date=datetime.datetime(2025, 1, 18, 18, 22, 21, 876000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=4.780923305699728,
          ),
          EntryHistory(
            completed=True,
            date=datetime.datetime(2025, 1, 20, 11, 47, 2, 987000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=5.665617021312497,
          ),
          EntryHistory(
            completed=False,
            date=datetime.datetime(2025, 2, 1, 15, 6, 43, 542000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=4.800754343722116,
          ),
        ]),
        id=UUID('c65a4932-f81d-4e83-a1f5-b94bc1b5a505'),
        isDue=True,
        nextDue=list([
          datetime.datetime(2025, 2, 2, 23, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2025, 2, 3, 23, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2025, 2, 4, 23, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2025, 2, 5, 23, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2025, 2, 6, 23, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2025, 2, 7, 23, 0, tzinfo=datetime.timezone.utc),
        ]),
        notes='task notes',
        priority=<TaskPriority.EASY: 1>,
        reminders=list([
        ]),
        repeat=Repeat(
          f=True,
          m=True,
          s=True,
          su=True,
          t=True,
          th=True,
          w=True,
        ),
        startDate=datetime.datetime(2025, 1, 5, 23, 0, tzinfo=datetime.timezone.utc),
        streak=0,
        tags=list([
        ]),
        text='task text',
        up=None,
        updatedAt=datetime.datetime(2025, 2, 1, 15, 6, 43, 561000, tzinfo=datetime.timezone.utc),
        userId=UUID('2a61fddc-654f-4ded-b906-bb8a6da680d5'),
        value=4.800754343722116,
        weeksOfMonth=list([
        ]),
        yesterDaily=True,
      ),
      TaskData(
        Type=<TaskType.DAILY: 'daily'>,
        alias=None,
        attribute=<Attributes.STR: 'str'>,
        byHabitica=False,
        challenge=Challenge(
          broken=None,
          id=None,
          shortName=None,
          taskId=None,
          winner=None,
        ),
        checklist=list([
        ]),
        collapseChecklist=False,
        completed=False,
        counterDown=None,
        counterUp=None,
        createdAt=datetime.datetime(2025, 1, 6, 22, 42, 56, 440000, tzinfo=datetime.timezone.utc),
        date=None,
        daysOfMonth=list([
        ]),
        down=None,
        everyX=1,
        frequency=<Frequency.WEEKLY: 'weekly'>,
        group=GroupTask(
          assignedDate=None,
          assignedUsers=list([
          ]),
          assignedUsersDetail=dict({
          }),
          assigningUsername=None,
          completedBy=CompletedBy(
            date=None,
            userId=None,
          ),
          id=None,
          managerNotes=None,
          taskId=None,
        ),
        history=list([
          EntryHistory(
            completed=True,
            date=datetime.datetime(2025, 1, 6, 23, 0, 9, 693000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=1.0,
          ),
          EntryHistory(
            completed=True,
            date=datetime.datetime(2025, 1, 10, 1, 12, 46, 314000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=1.9747,
          ),
          EntryHistory(
            completed=False,
            date=datetime.datetime(2025, 1, 10, 23, 2, 8, 866000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=1.024043774264157,
          ),
          EntryHistory(
            completed=True,
            date=datetime.datetime(2025, 1, 13, 17, 48, 43, 165000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=1.998143412564751,
          ),
          EntryHistory(
            completed=True,
            date=datetime.datetime(2025, 1, 13, 23, 0, 47, 612000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=2.9482287028135716,
          ),
          EntryHistory(
            completed=False,
            date=datetime.datetime(2025, 1, 15, 17, 31, 41, 494000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=2.020995311995297,
          ),
          EntryHistory(
            completed=True,
            date=datetime.datetime(2025, 1, 18, 18, 22, 21, 873000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=2.9705244023522885,
          ),
          EntryHistory(
            completed=True,
            date=datetime.datetime(2025, 1, 20, 11, 47, 2, 985000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=3.8972281794078136,
          ),
          EntryHistory(
            completed=False,
            date=datetime.datetime(2025, 2, 1, 15, 6, 43, 543000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=2.992271863689143,
          ),
        ]),
        id=UUID('1b21023c-b1e6-4b11-bcfa-9d48473033a1'),
        isDue=True,
        nextDue=list([
          datetime.datetime(2025, 2, 2, 23, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2025, 2, 3, 23, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2025, 2, 4, 23, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2025, 2, 5, 23, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2025, 2, 6, 23, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2025, 2, 7, 23, 0, tzinfo=datetime.timezone.utc),
        ]),
        notes='task notes',
        priority=<TaskPriority.EASY: 1>,
        reminders=list([
        ]),
        repeat=Repeat(
          f=True,
          m=True,
          s=True,
          su=True,
          t=True,
          th=True,
          w=True,
        ),
        startDate=datetime.datetime(2025, 1, 5, 23, 0, tzinfo=datetime.timezone.utc),
        streak=0,
        tags=list([
        ]),
        text='task text',
        up=None,
        updatedAt=datetime.datetime(2025, 2, 1, 15, 6, 43, 561000, tzinfo=datetime.timezone.utc),
        userId=UUID('2a61fddc-654f-4ded-b906-bb8a6da680d5'),
        value=2.992271863689143,
        weeksOfMonth=list([
        ]),
        yesterDaily=True,
      ),
      TaskData(
        Type=<TaskType.DAILY: 'daily'>,
        alias=None,
        attribute=<Attributes.STR: 'str'>,
        byHabitica=False,
        challenge=Challenge(
          broken=None,
          id=None,
          shortName=None,
          taskId=None,
          winner=None,
        ),
        checklist=list([
        ]),
        collapseChecklist=False,
        completed=False,
        counterDown=None,
        counterUp=None,
        createdAt=datetime.datetime(2025, 1, 13, 18, 36, 13, 598000, tzinfo=datetime.timezone.utc),
        date=None,
        daysOfMonth=list([
        ]),
        down=None,
        everyX=1,
        frequency=<Frequency.WEEKLY: 'weekly'>,
        group=GroupTask(
          assignedDate=None,
          assignedUsers=list([
          ]),
          assignedUsersDetail=dict({
          }),
          assigningUsername=None,
          completedBy=CompletedBy(
            date=None,
            userId=None,
          ),
          id=None,
          managerNotes=None,
          taskId=None,
        ),
        history=list([
          EntryHistory(
            completed=True,
            date=datetime.datetime(2025, 1, 13, 23, 0, 47, 609000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=1.0,
          ),
          EntryHistory(
            completed=False,
            date=datetime.datetime(2025, 1, 15, 17, 31, 41, 495000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=0.02529999999999999,
          ),
          EntryHistory(
            completed=True,
            date=datetime.datetime(2025, 1, 18, 18, 22, 21, 868000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=1.0246518837628547,
          ),
          EntryHistory(
            completed=True,
            date=datetime.datetime(2025, 1, 20, 11, 47, 2, 982000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=1.9987363426517264,
          ),
          EntryHistory(
            completed=False,
            date=datetime.datetime(2025, 2, 1, 15, 6, 43, 543000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=1.048665488039431,
          ),
        ]),
        id=UUID('dad786c2-d333-4a24-b81e-4714537b0fec'),
        isDue=True,
        nextDue=list([
          datetime.datetime(2025, 2, 2, 23, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2025, 2, 3, 23, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2025, 2, 4, 23, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2025, 2, 5, 23, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2025, 2, 6, 23, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2025, 2, 7, 23, 0, tzinfo=datetime.timezone.utc),
        ]),
        notes='task notes',
        priority=<TaskPriority.EASY: 1>,
        reminders=list([
        ]),
        repeat=Repeat(
          f=True,
          m=True,
          s=True,
          su=True,
          t=True,
          th=True,
          w=True,
        ),
        startDate=datetime.datetime(2025, 1, 12, 23, 0, tzinfo=datetime.timezone.utc),
        streak=0,
        tags=list([
        ]),
        text='task text',
        up=None,
        updatedAt=datetime.datetime(2025, 2, 1, 15, 6, 43, 561000, tzinfo=datetime.timezone.utc),
        userId=UUID('2a61fddc-654f-4ded-b906-bb8a6da680d5'),
        value=1.048665488039431,
        weeksOfMonth=list([
        ]),
        yesterDaily=True,
      ),
      TaskData(
        Type=<TaskType.DAILY: 'daily'>,
        alias=None,
        attribute=<Attributes.STR: 'str'>,
        byHabitica=False,
        challenge=Challenge(
          broken=None,
          id=None,
          shortName=None,
          taskId=None,
          winner=None,
        ),
        checklist=list([
        ]),
        collapseChecklist=False,
        completed=False,
        counterDown=None,
        counterUp=None,
        createdAt=datetime.datetime(2025, 1, 13, 18, 36, 15, 291000, tzinfo=datetime.timezone.utc),
        date=None,
        daysOfMonth=list([
        ]),
        down=None,
        everyX=1,
        frequency=<Frequency.WEEKLY: 'weekly'>,
        group=GroupTask(
          assignedDate=None,
          assignedUsers=list([
          ]),
          assignedUsersDetail=dict({
          }),
          assigningUsername=None,
          completedBy=CompletedBy(
            date=None,
            userId=None,
          ),
          id=None,
          managerNotes=None,
          taskId=None,
        ),
        history=list([
          EntryHistory(
            completed=True,
            date=datetime.datetime(2025, 1, 13, 23, 0, 47, 608000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=1.0,
          ),
          EntryHistory(
            completed=False,
            date=datetime.datetime(2025, 1, 15, 17, 31, 41, 496000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=0.02529999999999999,
          ),
          EntryHistory(
            completed=True,
            date=datetime.datetime(2025, 1, 18, 18, 22, 21, 864000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=1.0246518837628547,
          ),
          EntryHistory(
            completed=True,
            date=datetime.datetime(2025, 1, 20, 11, 47, 2, 980000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=1.9987363426517264,
          ),
          EntryHistory(
            completed=False,
            date=datetime.datetime(2025, 2, 1, 15, 6, 43, 546000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=1.048665488039431,
          ),
        ]),
        id=UUID('a41c65d3-f97b-4fac-8bd8-1e9c43be99d1'),
        isDue=True,
        nextDue=list([
          datetime.datetime(2025, 2, 2, 23, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2025, 2, 3, 23, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2025, 2, 4, 23, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2025, 2, 5, 23, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2025, 2, 6, 23, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2025, 2, 7, 23, 0, tzinfo=datetime.timezone.utc),
        ]),
        notes='task notes',
        priority=<TaskPriority.EASY: 1>,
        reminders=list([
        ]),
        repeat=Repeat(
          f=True,
          m=True,
          s=True,
          su=True,
          t=True,
          th=True,
          w=True,
        ),
        startDate=datetime.datetime(2025, 1, 12, 23, 0, tzinfo=datetime.timezone.utc),
        streak=0,
        tags=list([
        ]),
        text='task text',
        up=None,
        updatedAt=datetime.datetime(2025, 2, 1, 15, 6, 43, 561000, tzinfo=datetime.timezone.utc),
        userId=UUID('2a61fddc-654f-4ded-b906-bb8a6da680d5'),
        value=1.048665488039431,
        weeksOfMonth=list([
        ]),
        yesterDaily=True,
      ),
      TaskData(
        Type=<TaskType.DAILY: 'daily'>,
        alias=None,
        attribute=<Attributes.STR: 'str'>,
        byHabitica=False,
        challenge=Challenge(
          broken=None,
          id=None,
          shortName=None,
          taskId=None,
          winner=None,
        ),
        checklist=list([
        ]),
        collapseChecklist=False,
        completed=False,
        counterDown=None,
        counterUp=None,
        createdAt=datetime.datetime(2025, 1, 13, 18, 36, 17, 152000, tzinfo=datetime.timezone.utc),
        date=None,
        daysOfMonth=list([
        ]),
        down=None,
        everyX=0,
        frequency=<Frequency.WEEKLY: 'weekly'>,
        group=GroupTask(
          assignedDate=None,
          assignedUsers=list([
          ]),
          assignedUsersDetail=dict({
          }),
          assigningUsername=None,
          completedBy=CompletedBy(
            date=None,
            userId=None,
          ),
          id=None,
          managerNotes=None,
          taskId=None,
        ),
        history=list([
          EntryHistory(
            completed=True,
            date=datetime.datetime(2025, 1, 13, 23, 0, 47, 605000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=1.0,
          ),
          EntryHistory(
            completed=False,
            date=datetime.datetime(2025, 1, 15, 17, 31, 41, 496000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=0.02529999999999999,
          ),
          EntryHistory(
            completed=True,
            date=datetime.datetime(2025, 1, 18, 18, 22, 21, 862000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=1.0246518837628547,
          ),
          EntryHistory(
            completed=True,
            date=datetime.datetime(2025, 1, 20, 11, 47, 2, 978000, tzinfo=datetime.timezone.utc),
            isDue=True,
            scoredDown=None,
            scoredUp=None,
            value=1.9987363426517264,
          ),
          EntryHistory(
            completed=False,
            date=datetime.datetime(2025, 2, 1, 15, 6, 43, 547000, tzinfo=datetime.timezone.utc),
            isDue=False,
            scoredDown=None,
            scoredUp=None,
            value=1.9987363426517264,
          ),
        ]),
        id=UUID('d9247fff-37ec-4c7e-9b15-de79b99a830f'),
        isDue=False,
        nextDue=list([
          datetime.datetime(2025, 1, 20, 23, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2025, 1, 21, 23, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2025, 1, 22, 23, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2025, 1, 23, 23, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2025, 1, 24, 23, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2025, 1, 26, 23, 0, tzinfo=datetime.timezone.utc),
        ]),
        notes='task notes',
        priority=<TaskPriority.EASY: 1>,
        reminders=list([
        ]),
        repeat=Repeat(
          f=True,
          m=True,
          s=True,
          su=True,
          t=True,
          th=True,
          w=True,
        ),
        startDate=datetime.datetime(2025, 1, 12, 23, 0, tzinfo=datetime.timezone.utc),
        streak=2,
        tags=list([
        ]),
        text='task text',
        up=None,
        updatedAt=datetime.datetime(2025, 2, 1, 15, 6, 43, 561000, tzinfo=datetime.timezone.utc),
        userId=UUID('2a61fddc-654f-4ded-b906-bb8a6da680d5'),
        value=1.9987363426517264,
        weeksOfMonth=list([
        ]),
        yesterDaily=True,
      ),
      TaskData(
        Type=<TaskType.TODO: 'todo'>,
        alias=None,
        attribute=<Attributes.STR: 'str'>,
        byHabitica=False,
        challenge=Challenge(
          broken=None,
          id=None,
          shortName=None,
          taskId=None,
          winner=None,
        ),
        checklist=list([
        ]),
        collapseChecklist=False,
        completed=False,
        counterDown=None,
        counterUp=None,
        createdAt=datetime.datetime(2025, 1, 18, 18, 45, 4, 942000, tzinfo=datetime.timezone.utc),
        date=None,
        daysOfMonth=list([
        ]),
        down=None,
        everyX=None,
        frequency=None,
        group=GroupTask(
          assignedDate=None,
          assignedUsers=list([
          ]),
          assignedUsersDetail=dict({
          }),
          assigningUsername=None,
          completedBy=CompletedBy(
            date=None,
            userId=None,
          ),
          id=None,
          managerNotes=None,
          taskId=None,
        ),
        history=list([
        ]),
        id=UUID('cfd7c79b-ac4d-4133-923f-36f169308b0d'),
        isDue=None,
        nextDue=list([
        ]),
        notes='task notes',
        priority=<TaskPriority.EASY: 1>,
        reminders=list([
        ]),
        repeat=Repeat(
          f=False,
          m=True,
          s=False,
          su=False,
          t=True,
          th=False,
          w=True,
        ),
        startDate=None,
        streak=None,
        tags=list([
        ]),
        text='task text',
        up=None,
        updatedAt=datetime.datetime(2025, 2, 1, 15, 6, 43, 561000, tzinfo=datetime.timezone.utc),
        userId=UUID('2a61fddc-654f-4ded-b906-bb8a6da680d5'),
        value=-2.025956256651074,
        weeksOfMonth=list([
        ]),
        yesterDaily=None,
      ),
    ]),
    notifications=list([
      NotificationsUser(
        Type='ITEM_RECEIVED',
        data=dict({
          'destination': 'stable',
          'icon': 'notif_orca_mount',
          'text': "To celebrate Summer Splash, we've given you an Orca Mount!",
          'title': 'Orcas for Summer Splash!',
        }),
        id=UUID('b7a85df1-06ed-4ab1-b56d-43418fc6a5e5'),
        seen=True,
      ),
      NotificationsUser(
        Type='UNALLOCATED_STATS_POINTS',
        data=dict({
          'points': 2,
        }),
        id=UUID('bc3f8a69-231f-4eb1-ba48-a00b6c0e0f37'),
        seen=True,
      ),
    ]),
    success=True,
    userV=589,
  )
# ---
# name: test_reorder_task
  HabiticaTaskOrderResponse(
    appVersion='5.28.6',
    data=list([
      UUID('ac13c62c-9375-4809-a357-0e42b01a1b43'),
      UUID('2388ccad-0387-4ea6-9968-2d10d994e903'),
      UUID('5c6efb91-6ae3-4cad-8b19-2dd2fc52a965'),
      UUID('80afe0b9-e367-4473-8117-b8bc7115f54a'),
      UUID('4cc21c36-886c-4a43-b580-877e958a37fd'),
      UUID('10a45996-7133-4ca1-84d8-abf1093d9dcc'),
      UUID('fb867459-ae50-4cee-9017-c13206c6dfa2'),
    ]),
    notifications=list([
      NotificationsUser(
        Type='ITEM_RECEIVED',
        data=dict({
          'destination': 'stable',
          'icon': 'notif_orca_mount',
          'text': "To celebrate Summer Splash, we've given you an Orca Mount!",
          'title': 'Orcas for Summer Splash!',
        }),
        id=UUID('b7a85df1-06ed-4ab1-b56d-43418fc6a5e5'),
        seen=True,
      ),
      NotificationsUser(
        Type='UNALLOCATED_STATS_POINTS',
        data=dict({
          'points': 2,
        }),
        id=UUID('bc3f8a69-231f-4eb1-ba48-a00b6c0e0f37'),
        seen=True,
      ),
    ]),
    success=True,
    userV=589,
  )
# ---
# name: test_update_task
  HabiticaTaskResponse(
    appVersion='5.28.6',
    data=TaskData(
      Type=<TaskType.HABIT: 'habit'>,
      alias='counter_test',
      attribute=<Attributes.STR: 'str'>,
      byHabitica=False,
      challenge=Challenge(
        broken=None,
        id=None,
        shortName=None,
        taskId=None,
        winner=None,
      ),
      checklist=list([
      ]),
      collapseChecklist=False,
      completed=None,
      counterDown=0,
      counterUp=0,
      createdAt=datetime.datetime(2024, 9, 22, 16, 41, 39, 555000, tzinfo=datetime.timezone.utc),
      date=None,
      daysOfMonth=list([
      ]),
      down=False,
      everyX=None,
      frequency=<Frequency.DAILY: 'daily'>,
      group=GroupTask(
        assignedDate=None,
        assignedUsers=list([
        ]),
        assignedUsersDetail=dict({
        }),
        assigningUsername=None,
        completedBy=CompletedBy(
          date=None,
          userId=None,
        ),
        id=None,
        managerNotes=None,
        taskId=None,
      ),
      history=list([
        EntryHistory(
          completed=None,
          date=datetime.datetime(2024, 10, 7, 19, 19, 47, 306000, tzinfo=datetime.timezone.utc),
          isDue=None,
          scoredDown=0,
          scoredUp=1,
          value=1.0,
        ),
        EntryHistory(
          completed=None,
          date=datetime.datetime(2024, 10, 16, 20, 19, 11, 168000, tzinfo=datetime.timezone.utc),
          isDue=None,
          scoredDown=0,
          scoredUp=9,
          value=8.184193475367,
        ),
      ]),
      id=UUID('7bc0d924-f5e5-48a6-af7f-8075f8c94e0f'),
      isDue=None,
      nextDue=list([
      ]),
      notes='task notes',
      priority=<TaskPriority.EASY: 1>,
      reminders=list([
      ]),
      repeat=Repeat(
        f=False,
        m=True,
        s=False,
        su=False,
        t=True,
        th=False,
        w=True,
      ),
      startDate=None,
      streak=None,
      tags=list([
      ]),
      text='task text',
      up=True,
      updatedAt=datetime.datetime(2024, 10, 26, 16, 48, 8, 742000, tzinfo=datetime.timezone.utc),
      userId=UUID('2a61fddc-654f-4ded-b906-bb8a6da680d5'),
      value=0.0,
      weeksOfMonth=list([
      ]),
      yesterDaily=None,
    ),
    notifications=list([
      NotificationsUser(
        Type='ITEM_RECEIVED',
        data=dict({
          'destination': 'stable',
          'icon': 'notif_orca_mount',
          'text': "To celebrate Summer Splash, we've given you an Orca Mount!",
          'title': 'Orcas for Summer Splash!',
        }),
        id=UUID('b7a85df1-06ed-4ab1-b56d-43418fc6a5e5'),
        seen=True,
      ),
      NotificationsUser(
        Type='UNALLOCATED_STATS_POINTS',
        data=dict({
          'points': 2,
        }),
        id=UUID('bc3f8a69-231f-4eb1-ba48-a00b6c0e0f37'),
        seen=True,
      ),
    ]),
    success=True,
    userV=589,
  )
# ---
